--- a/public/style.css
+++ b/public/style.css
@@ -240,6 +240,9 @@ button:hover {
   .activity2-container{
     display: none;
   }
+  .price-card-mobile{
+    display: none;
+  }
 }
 
 @media (max-width:720px) {
@@ -271,5 +274,14 @@ button:hover {
   }
   .activity2{
     height: 100%;
+    flex: 1;
+  }
+  .price-card-mobile{
+    position: absolute;
+    transform: translate(32rem,-7rem);
+    z-index: 2;
+  }
+  .backpack-image{
+    flex: 1;
   }
 }
