improved lighthouse performance score

--- a/public/style.css
+++ b/public/style.css
@@ -84,6 +84,9 @@ h3 {
 .arrow {
   margin-left: 0.5rem;
   padding-top: 0.5rem;
+  width: 45px;
+  height: 19.25px;
+  aspect-ratio: 4/1;
 }
 
 button {
@@ -163,6 +166,7 @@ button:hover {
   justify-content: flex-end;
   align-items: flex-start;
   flex: 1;
+  max-width: 20rem;
 }
 
 .activity1 {
@@ -190,7 +194,8 @@ button:hover {
   align-items: center;
   background-color: #2b2b35;
   width: 100%;
-  aspect-ratio: 1 / 1;
+  max-width: 20rem;
+  aspect-ratio: 1/1;
 }
 
 .left-card {
@@ -207,6 +212,10 @@ button:hover {
   padding: 0rem;
   width: 100%;
   aspect-ratio: 3/4;
+  max-width: 20rem;
+}
+.backpack{
+  aspect-ratio: 1/1;
 }
 
 .price-card{
@@ -270,7 +279,7 @@ button:hover {
   }
   .logo{
     position: absolute;
-    transform: translate(19.25rem,9.5rem);
+    transform: translate(19.25rem,15rem);
   }
   .activity2{
     height: 100%;
